Add generation request filters
